unpackaged/main/default/objects/Purchase_Invoice__c/Purchase_Invoice__c.object-meta.xml
<CustomObject>
    <label>Purchase Invoice</label>
    <nameField>
        <label>Purchase Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>