unpackaged/main/default/objects/Purchase_Invoice__c/fields/Date_del__c.field-meta.xml
<CustomField>
    <fullName>Date_del__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>