unpackaged/main/default/objects/Purchase_Invoice__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Purchase Invoices</relationshipLabel>
    <relationshipName>Purchase_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>