unpackaged/main/default/objects/Purchase_Invoice__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PurchaseOrder__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PurchaseOrder__c</referenceTo>
    <relationshipLabel>Purchase Invoices</relationshipLabel>
    <relationshipName>Purchase_Invoices</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>